--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,7 +1,10 @@
-<h3>Welcome, {{currentUser}}</h3>
+<h3>Welcome, {{username}}!</h3>
 <p><strong>Favorite Bars</strong></p>
 <ul>
   {{#each bars}}
   <li>{{this.name}}</li>
   {{/each}}
 </ul>
+<a class="btn btn-default" href="/{{id}}/bars/new" type="button" name="button">Add Bar</a>
+<hr>
+<a class="btn btn-primary" href="/users/{{id}}/edit" type="button" name="button">Account Settings</a>
