--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -5,6 +5,6 @@
   <li>{{this.name}}</li>
   {{/each}}
 </ul>
-<a class="btn btn-default" href="/{{id}}/bars/new" type="button" name="button">Add Bar</a>
+<a class="btn btn-default" href="/users/{{id}}/bars/new" type="button" name="button">Add Bar</a>
 <hr>
 <a class="btn btn-primary" href="/users/{{id}}/edit" type="button" name="button">Account Settings</a>
