end day 2. MVC nearly complete

--- a/views/bars/new.hbs
+++ b/views/bars/new.hbs
@@ -1,5 +1,5 @@
 <h3>Add Bar</h3>
-<form action="/users{{id}}/bars/" method="POST">
+<form action="/users/{{id}}/bars/" method="POST">
   <div class="form-group">
     <label for="address-name">Name</label>
     <input type="text" class="form-control" name="name" id="address-name" autofocus required>
@@ -10,7 +10,7 @@
   </div>
   <div class="form-group">
     <label for="address-city">City</label>
-    <input type="password" class="form-control" name="city" id="address-city" required>
+    <input type="text" class="form-control" name="city" id="address-city" required>
   </div>
   <div class="form-group">
     <label for="address-state">State</label>
