--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,4 +1,4 @@
-<h3>Welcome, {{username}}!</h3>
+<h3>{{username}}'s Profile</h3>
 <p><strong>Favorite Bars</strong></p>
 <ul class="list-unstyled">
   {{#each bars}}
