profiles not showing edit buttons if notOwner

--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -5,6 +5,8 @@
   <li><a href="/users/{{../id}}/bars/{{this._id}}">{{this.name}}</a></li>
   {{/each}}
 </ul>
+{{#if isOwner}}
 <a class="btn btn-default" href="/users/{{id}}/bars/new" type="button" name="button">Add Bar</a>
 <hr>
 <a class="btn btn-primary" href="/users/{{id}}/edit" type="button" name="button">Account Settings</a>
+{{/if}}
