--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,12 +25,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            {{#if signedIn}}
-            <li><a href="/users/">Profile</a></li>
-            <li><a href="/logout">Logout</a></li>
+            {{#if isSignedIn}}
+            <li><a href="/">Profile</a></li>
+            <li><a href="/logout">Log out</a></li>
             {{else}}
-            <li><a href="/login">Login</a></li>
-            <li><a href="/signup">Signup</a></li>
+            <li><a href="/login">Log in</a></li>
+            <li><a href="/signup">Sign up</a></li>
             {{/if}}
           </ul>
         </div><!--/.nav-collapse -->
