--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -5,8 +5,8 @@
   <li><a href="/users/{{../username}}/bars/{{this._id}}">{{this.name}}</a></li>
   {{/each}}
 </ul>
-{{#if isOwner}}
+<!-- {{#if isOwner}} -->
 <a class="btn btn-default" href="/users/{{username}}/bars/new" type="button" name="button">Add Bar</a>
-<hr>
+<!-- <hr>
 <a class="btn btn-primary" href="/users/{{username}}/edit" type="button" name="button">Account Settings</a>
-{{/if}}
+{{/if}} -->
