--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,8 +25,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
-            {{#if isSignedIn}}
+            {{#if isAuthenticated}}
             <li><a href="/">Profile</a></li>
+            <li><a href="/settings">Account Settings</a></li>
             <li><a href="/logout">Log out</a></li>
             {{else}}
             <li><a href="/login">Log in</a></li>
