pubcrawls/show working. minor text fixes

--- a/views/bars/new.hbs
+++ b/views/bars/new.hbs
@@ -1,4 +1,7 @@
-<h3>Add Bar</h3>
+<div class="page-header">
+  <h2>Add Bar</h2>
+</div>
+
 <form action="/users/{{username}}/bars/" method="POST">
   <div class="form-group">
     <label for="address-name">Name</label>
