--- a/views/bars/show.hbs
+++ b/views/bars/show.hbs
@@ -1,4 +1,6 @@
-<h3>Bar Details</h3>
+<div class="page-header">
+  <h2>Bar Details</h2>
+</div>
 <address>
   <strong>{{bar.name}}</strong><br>
   {{bar.address.street}}<br>
