--- a/views/pubcrawls/new.hbs
+++ b/views/pubcrawls/new.hbs
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group">
         <label for="pubcrawl-startTime">Start Time</label>
-        <input type="time" class="form-control" name="startTime" id="pubcrawl-startTime" required>
+        <input type="time" class="form-control" name="time" id="pubcrawl-startTime" required>
     </div>
     <div class="form-group">
         <label for="pubcrawl-bars">Select Bars</label>
