pubcrawl CRUD done

--- a/views/pubcrawls/show.hbs
+++ b/views/pubcrawls/show.hbs
@@ -1,8 +1,10 @@
 <div class="page-header">
   <h2>{{pubcrawl.name}}</h2>
 </div>
-<strong>When</strong>
-<p>{{formattedTime}}</p>
+<strong>Date</strong>
+<p>{{pubcrawl.date}}</p>
+<strong>Time</strong>
+<p>{{pubcrawl.time}}</p>
 <strong>Theme</strong>
 <p>{{pubcrawl.theme}}</p>
 <strong>Bars</strong>
