--- a/views/pubcrawls/edit.hbs
+++ b/views/pubcrawls/edit.hbs
@@ -1,7 +1,7 @@
 <div class="page-header">
     <h2>Edit Pubcrawl</h2>
 </div>
-<form action="/users/{{username}}/pubcrawls/{{pubcrawl._id}}?_method=PATCH" method="POST">
+<form action="/users/{{username}}/pubcrawls/{{pubcrawl._id}}?_method=PUT" method="POST">
     <div class="form-group">
         <label for="pubcrawl-name">Name</label>
         <input type="text" class="form-control" name="name" id="pubcrawl-name" value="{{pubcrawl.name}}" autofocus required>
@@ -12,11 +12,11 @@
     </div>
     <div class="form-group">
         <label for="pubcrawl-date">Date</label>
-        <input type="date" class="form-control" name="date" id="pubcrawl-date" value="{{date}}" required>
+        <input type="date" class="form-control" name="date" id="pubcrawl-date" value="{{pubcrawl.date}}" required>
     </div>
     <div class="form-group">
         <label for="pubcrawl-startTime">Start Time</label>
-        <input type="time" class="form-control" name="time" id="pubcrawl-startTime" value="{{when}}" required>
+        <input type="time" class="form-control" name="time" id="pubcrawl-startTime" value="{{pubcrawl.time}}" required>
     </div>
     <div class="form-group">
         <label for="pubcrawl-bars">Select Bars</label>
@@ -35,14 +35,14 @@
     <label for="pubcrawl-bars">Transportation</label>
       <div class="radio">
         <label>
-          <input type="radio" name="transportation" value="walking" checked>
+          <input type="radio" name="transportation" value="walking">
           Walking
         </label>
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="transportation" value="partyBus">
-          Party Bus
+          <input type="radio" name="transportation" value="Bus">
+          Bus
         </label>
       </div>
     </div>
@@ -61,3 +61,9 @@
     <button type="submit" class="btn btn-success">Submit</button>
     <a class="btn btn-default" href="/" type="button" name="button">Cancel</a>
 </form>
+<script type="text/javascript">
+{{#each pubcrawl.bars}}
+$('input[type="checkbox"][value="{{this._id}}"]').attr('checked', 'true');
+{{/each}}
+$('input[type="radio"][value="{{pubcrawl.transportation}}"]').attr('checked', 'true');
+</script>
