--- a/views/bars/new.hbs
+++ b/views/bars/new.hbs
@@ -1,7 +1,20 @@
 <div class="page-header">
   <h2>Add Bar</h2>
 </div>
-
+<div class="jumbotron">
+  <form class="text-center" id="location-search">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Enter a location" required>
+      <div class="input-group-btn">
+        <button type="button" class="btn btn-info" id="get-current-location"><i class="fa fa-location-arrow" aria-hidden="true"></i></button>
+        <button type="submit" class="btn btn-primary">Search</button>
+      </div>
+    </div>
+  </form>
+  <div id="bar-container">
+    <ul class="list-unstyled" id="bar-list"></ul>
+  </div>
+</div>
 <form action="/users/{{username}}/bars/" method="POST">
   <div class="form-group">
     <label for="address-name">Name</label>
@@ -18,60 +31,61 @@
   <div class="form-group">
     <label for="address-state">State</label>
     <select class="form-control" id="address-state" name="state">
-  	<option value="AL">Alabama</option>
-  	<option value="AK">Alaska</option>
-  	<option value="AZ">Arizona</option>
-  	<option value="AR">Arkansas</option>
-  	<option value="CA">California</option>
-  	<option value="CO">Colorado</option>
-  	<option value="CT">Connecticut</option>
-  	<option value="DE">Delaware</option>
-  	<option value="DC">District Of Columbia</option>
-  	<option value="FL">Florida</option>
-  	<option value="GA">Georgia</option>
-  	<option value="HI">Hawaii</option>
-  	<option value="ID">Idaho</option>
-  	<option value="IL">Illinois</option>
-  	<option value="IN">Indiana</option>
-  	<option value="IA">Iowa</option>
-  	<option value="KS">Kansas</option>
-  	<option value="KY">Kentucky</option>
-  	<option value="LA">Louisiana</option>
-  	<option value="ME">Maine</option>
-  	<option value="MD">Maryland</option>
-  	<option value="MA">Massachusetts</option>
-  	<option value="MI">Michigan</option>
-  	<option value="MN">Minnesota</option>
-  	<option value="MS">Mississippi</option>
-  	<option value="MO">Missouri</option>
-  	<option value="MT">Montana</option>
-  	<option value="NE">Nebraska</option>
-  	<option value="NV">Nevada</option>
-  	<option value="NH">New Hampshire</option>
-  	<option value="NJ">New Jersey</option>
-  	<option value="NM">New Mexico</option>
-  	<option value="NY">New York</option>
-  	<option value="NC">North Carolina</option>
-  	<option value="ND">North Dakota</option>
-  	<option value="OH">Ohio</option>
-  	<option value="OK">Oklahoma</option>
-  	<option value="OR">Oregon</option>
-  	<option value="PA">Pennsylvania</option>
-  	<option value="RI">Rhode Island</option>
-  	<option value="SC">South Carolina</option>
-  	<option value="SD">South Dakota</option>
-  	<option value="TN">Tennessee</option>
-  	<option value="TX">Texas</option>
-  	<option value="UT">Utah</option>
-  	<option value="VT">Vermont</option>
-  	<option value="VA">Virginia</option>
-  	<option value="WA">Washington</option>
-  	<option value="WV">West Virginia</option>
-  	<option value="WI">Wisconsin</option>
-  	<option value="WY">Wyoming</option>
-  </select>
+      <option value="AL">Alabama</option>
+      <option value="AK">Alaska</option>
+      <option value="AZ">Arizona</option>
+      <option value="AR">Arkansas</option>
+      <option value="CA">California</option>
+      <option value="CO">Colorado</option>
+      <option value="CT">Connecticut</option>
+      <option value="DE">Delaware</option>
+      <option value="DC">District Of Columbia</option>
+      <option value="FL">Florida</option>
+      <option value="GA">Georgia</option>
+      <option value="HI">Hawaii</option>
+      <option value="ID">Idaho</option>
+      <option value="IL">Illinois</option>
+      <option value="IN">Indiana</option>
+      <option value="IA">Iowa</option>
+      <option value="KS">Kansas</option>
+      <option value="KY">Kentucky</option>
+      <option value="LA">Louisiana</option>
+      <option value="ME">Maine</option>
+      <option value="MD">Maryland</option>
+      <option value="MA">Massachusetts</option>
+      <option value="MI">Michigan</option>
+      <option value="MN">Minnesota</option>
+      <option value="MS">Mississippi</option>
+      <option value="MO">Missouri</option>
+      <option value="MT">Montana</option>
+      <option value="NE">Nebraska</option>
+      <option value="NV">Nevada</option>
+      <option value="NH">New Hampshire</option>
+      <option value="NJ">New Jersey</option>
+      <option value="NM">New Mexico</option>
+      <option value="NY">New York</option>
+      <option value="NC">North Carolina</option>
+      <option value="ND">North Dakota</option>
+      <option value="OH">Ohio</option>
+      <option value="OK">Oklahoma</option>
+      <option value="OR">Oregon</option>
+      <option value="PA">Pennsylvania</option>
+      <option value="RI">Rhode Island</option>
+      <option value="SC">South Carolina</option>
+      <option value="SD">South Dakota</option>
+      <option value="TN">Tennessee</option>
+      <option value="TX">Texas</option>
+      <option value="UT">Utah</option>
+      <option value="VT">Vermont</option>
+      <option value="VA">Virginia</option>
+      <option value="WA">Washington</option>
+      <option value="WV">West Virginia</option>
+      <option value="WI">Wisconsin</option>
+      <option value="WY">Wyoming</option>
+    </select>
   </div>
-
   <button type="submit" class="btn btn-success">Submit</button>
   <a class="btn btn-default" href="/" type="button" name="button">Cancel</a>
 </form>
+<script src="https://use.fontawesome.com/4894c0e16d.js"></script>
+<script type="text/javascript" src="/js/google.js"></script>
