--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,8 +2,11 @@ body {
   margin: 50px 0;
 }
 img#bar-map {
-  margin-bottom: 20px
+  margin-bottom: 20px;
 }
 div#google-map {
   height: 100%;
+}
+form#search-results-select {
+  margin-top: 10px;
 }
