--- a/views/pubcrawls/new.hbs
+++ b/views/pubcrawls/new.hbs
@@ -28,7 +28,7 @@
                 </label>
             </div>
         {{/each}}
-        <p>Add more bars <a href="/users/{{username}}/bars/new"><strong>here</strong></a>.</p>
+        <p>Add more bars <a href="/users/{{username}}/bars/new"><strong>here</strong></a>. <span class="text-warning">(You will lose progress)</span></p>
     </div>
 
     <div class="form-group">
@@ -41,8 +41,8 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="transportation" value="partyBus">
-          Party Bus
+          <input type="radio" name="transportation" value="bus">
+          Bus
         </label>
       </div>
     </div>
