--- a/views/bars/new.hbs
+++ b/views/bars/new.hbs
@@ -34,7 +34,7 @@
   </div>
   <div class="form-group">
     <label for="address-state">State</label>
-    <select class="form-control" id="address-state" name="state">
+    <select class="form-control" id="address-state" name="state" required>
       <option value="AL">Alabama</option>
       <option value="AK">Alaska</option>
       <option value="AZ">Arizona</option>
