--- a/views/pubcrawls/edit.hbs
+++ b/views/pubcrawls/edit.hbs
@@ -1,7 +1,7 @@
 <div class="page-header">
     <h2>Edit Pubcrawl</h2>
 </div>
-<form action="/users/{{username}}/pubcrawls/{{pubcrawl._id}}?_method=PUT" method="POST">
+<form action="/users/{{username}}/pubcrawls/{{pubcrawl._id}}?_method=PATCH" method="POST">
     <div class="form-group">
         <label for="pubcrawl-name">Name</label>
         <input type="text" class="form-control" name="name" id="pubcrawl-name" value="{{pubcrawl.name}}" autofocus required>
@@ -41,7 +41,7 @@
       </div>
       <div class="radio">
         <label>
-          <input type="radio" name="transportation" value="Bus">
+          <input type="radio" name="transportation" value="bus">
           Bus
         </label>
       </div>
