polish new font

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,9 @@ body {
   margin: 50px 0;
   font-family: 'Roboto', sans-serif;
 }
+a.navbar-brand {
+  font-family: 'Palanquin Dark', sans-serif;
+}
 img#bar-map {
   margin-bottom: 20px;
 }
