--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -41,5 +41,10 @@
     <div class="container">
       {{{body}}}
     </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+   <div class="container">
+     <p class="navbar-text">©2017 <a href="https://raymeibaum.github.io/" id="footer-link">Ray Meibaum</a>. All rights reserved.</p>
+   </div>
+ </nav>
   </body>
 </html>
